--- a/en.html
+++ b/en.html
@@ -24,7 +24,7 @@
   <link href="assets/css/rtl.css" rel="stylesheet">
 </head>
 
-<body>
+<body >
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
@@ -40,10 +40,8 @@
     </div>
   </section>
 
-  <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-
+  <header id="header" class="d-flex " >
+    <div class="container d-flex nav-content">
       <nav id="navbar" class="navbar">
         <ul style="direction: ltr;">
           
@@ -57,10 +55,13 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
+      <a href="index.html" class="logo "><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+
+     
     </div>
   </header>
 
-  <section id="hero">
+  <section id="hero" style="direction: ltr;">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -133,7 +134,7 @@
     </div>
   </section>
 
-  <main id="main">
+  <main id="main" style="direction: ltr;">
     <!-- <section id="featured-services" class="featured-services section-bg">
       <div class="container">
         <div class="section-title pt-5">
