--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <li><a class="nav-link scrollto" href="#services">المميزات</a></li>
           <!-- <li><a class="nav-link scrollto" href="#testimonials">أراء العملاء</a></li> -->
           <li><a class="nav-link scrollto" href="#faq">اﻷسئلة الشائعة</a></li>
+          <li><a class="nav-link scrollto" href="payment_ar.html">الدفع</a></li>
+
           <!-- <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li> -->
           <!-- <li><a class="getstarted scrollto" href="#about">أبدأ اﻷن</a></li> -->
         </ul>
