--- a/en.html
+++ b/en.html
@@ -22,20 +22,21 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/rtl.css" rel="stylesheet">
+  <link href="payment.css" rel="stylesheet">
 </head>
 
 <body >
   <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container top-bar-content d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@skycrow.com</a>
+        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@skycrow.net</a>
       </div>
-      <div class="social-links d-none d-md-block">
+      <div class="social-links  d-md-block">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="index.html" class="locale">Arabic</a>
+        <a class="lang"  href="index.html" class="locale">Arabic</a>
       </div>
     </div>
   </section>
@@ -48,7 +49,7 @@
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Features</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
-          <li><a class="nav-link scrollto" href="payment_en.html">payment</a></li>
+          <li><a class="nav-link scrollto" href="#payment">payment methods</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -66,15 +67,15 @@
         <div class="carousel-item active slide1">
           <div class="carousel-container">
             <div class="container">
-              <div class="d-flex align-items-center">
-                <div class="flex-grow-1 ms-3">
+              <div class="car-content d-flex align-items-center">
+                <div class="flex-grow-1 ms-3 ms-sm-0">
                   <h2 class="animate__animated animate__fadeInDown">Save with SkyCrow App</h2>
                   <p class="animate__animated animate__fadeInUp">
                     Save 80% or more on shipping costs when you ship with SkyCrow and enjoy secure delivery.
                   </p>
                   <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
                 </div>
-                <div class="flex-shrink-0 ms-5">
+                <div class="flex-shrink-0 ms-5 ms-sm-0">
                   <img src="assets/img/hero-img.png" class="animate__animated animate__fadeInUp" style="width:500px">
                 </div>
               </div>
@@ -85,7 +86,7 @@
         <div class="carousel-item slide2">
           <div class="carousel-container">
             <div class="container">
-              <div class="d-flex align-items-center">
+              <div class="car-content d-flex align-items-center">
                 <div class="flex-grow-1 ms-3">
                   <h2 class="animate__animated animate__fadeInDown">With SkyCrow, Same-Day Delivery</h2>
                   <p class="animate__animated animate__fadeInUp">
@@ -104,7 +105,7 @@
         <div class="carousel-item slide3">
           <div class="carousel-container">
             <div class="container">
-              <div class="d-flex align-items-center">
+              <div class="car-content d-flex align-items-center">
                 <div class="flex-grow-1 ms-3">
                   <h2 class="animate__animated animate__fadeInDown">Ship from Anywhere with SkyCrow</h2>
                   <p class="animate__animated animate__fadeInUp">
@@ -304,6 +305,41 @@
               </div>
             </li>
           </ul>
+        </div>
+      </div>
+    </section>
+    <section id="payment" class="faq section-bg">
+      <div class="container">
+        <div class="section-title aos-init aos-animate" data-aos="fade-up">
+          <h2>payment methods</h2>
+        </div>
+        <div class="payment-methods">
+          <div class="method" >
+            <img src="assets/img/payment/visa.jfif" alt="Visa">
+            <p>visa</p>
+          </div>
+          <!-- MasterCard -->
+          <div class="method" >
+            <img src="assets/img/payment/master.jfif" alt="MasterCard">
+            <p>master card</p>
+          </div>
+          <!-- American Express -->
+          <div class="method" >
+            <img src="assets/img/payment/debit.jpg" alt="debit card">
+            <p> debit Card</p>
+          </div>
+          <!-- Discover -->
+          <div class="method" >
+            <img src="assets/img/payment/apple.jpg" alt="apple">
+            <p> apple pay</p>
+          </div>
+  
+          <div class="method" >
+            <img src="assets/img/payment/google.jpg" alt=" google">
+            <p> google pay  </p>
+          </div>
+      
+  
         </div>
       </div>
     </section>
