--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/rtl.css" rel="stylesheet">
+  <link href="payment.css" rel="stylesheet">
 </head>
 
 <body>
   <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container top-bar-content  d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@skycrow.com</a>
+        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@skycrow.net</a>
       </div>
-      <div class="social-links d-none d-md-block">
+      <div class="social-links  d-md-block">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="en.html" class="locale">الانجليزيه</a>
+        <a class="lang" href="en.html" class="locale">الانجليزيه</a>
       </div>
     </div>
   </section>
@@ -50,7 +51,7 @@
           <li><a class="nav-link scrollto" href="#services">المميزات</a></li>
           <!-- <li><a class="nav-link scrollto" href="#testimonials">أراء العملاء</a></li> -->
           <li><a class="nav-link scrollto" href="#faq">اﻷسئلة الشائعة</a></li>
-          <li><a class="nav-link scrollto" href="payment_ar.html">الدفع</a></li>
+          <li><a class="nav-link scrollto" href="#payment">وسائل الدفع</a></li>
 
           <!-- <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li> -->
           <!-- <li><a class="getstarted scrollto" href="#about">أبدأ اﻷن</a></li> -->
@@ -70,7 +71,7 @@
           <div class="carousel-container">
             <div class="container">
 
-              <div class="d-flex align-items-center">
+              <div class=" car-content d-flex align-items-center">
                 <div class="flex-grow-1 ms-3">
                   <h2 class="animate__animated animate__fadeInDown">وفر مع تطبيق سكاي كرو</h2>
                   <p class="animate__animated animate__fadeInUp rtl">
@@ -91,7 +92,7 @@
           <div class="carousel-container">
             <div class="container">
 
-              <div class="d-flex align-items-center">
+              <div class="car-content  d-flex align-items-center">
                 <div class="flex-grow-1 ms-3">
                   <h2 class="animate__animated animate__fadeInDown">مع سكاي كرو وصول الشحنة في نفس اليوم</h2>
                   <p class="animate__animated animate__fadeInUp rtl">
@@ -110,7 +111,7 @@
           <div class="carousel-container">
             <div class="container">
 
-              <div class="d-flex align-items-center">
+              <div class="car-content d-flex align-items-center">
                 <div class="flex-grow-1 ms-3">
                   <h2 class="animate__animated animate__fadeInDown">اشحن من أي مكان في العالم مع سكاي كرو</h2>
                   <p class="animate__animated animate__fadeInUp rtl">
@@ -428,7 +429,40 @@
       </div>
     </section> -->
   </main>
-
+  <section id="payment" class="faq section-bg">
+    <div class="container">
+      <div class="section-title aos-init aos-animate" data-aos="fade-up">
+        <h2>   وسائل الدفع</h2>
+        <div class="payment-methods">
+          <div class="method" >
+            <img src="assets/img/payment/visa.jfif" alt="Visa">
+            <p>فيزا</p>
+          </div>
+          <!-- MasterCard -->
+          <div class="method" >
+            <img src="assets/img/payment/master.jfif" alt="MasterCard">
+            <p>ماستركارد</p>
+          </div>
+          <!-- American Express -->
+          <div class="method" >
+            <img src="assets/img/payment/debit.jpg" alt="debit card">
+            <p> ديبت كارد</p>
+          </div>
+          <!-- Discover -->
+          <div class="method" >
+            <img src="assets/img/payment/apple.jpg" alt="apple">
+            <p>أبل باي</p>
+          </div>
+  
+          <div class="method" >
+            <img src="assets/img/payment/google.jpg" alt=" google">
+            <p>جوجل باي  </p>
+          </div>
+      
+  
+        </div>
+    </div>
+  </section>
   <footer id="footer">
     <div class="container">
       <h3>Sky Crow</h3>
