--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a class="lang" href="en.html" class="locale">الانجليزيه</a>
+        <a class="lang" href="en.html" class="locale">English</a>
       </div>
     </div>
   </section>
