--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto" href="#services">المميزات</a></li>
           <!-- <li><a class="nav-link scrollto" href="#testimonials">أراء العملاء</a></li> -->
           <li><a class="nav-link scrollto" href="#faq">اﻷسئلة الشائعة</a></li>
-          <li><a class="nav-link scrollto" href="#steps"> فيديوهات تعريفيه </a></li>
+          <li><a class="nav-link scrollto" href="#videos"> فيديوهات تعريفيه </a></li>
           <li><a class="nav-link scrollto" href="#payment">وسائل الدفع</a></li>
 
           <!-- <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li> -->
@@ -336,7 +336,6 @@
        <div class="container">
           <div class="section-title aos-init aos-animate" data-aos="fade-up">
              <h2>اﻷسئلة الشائعة</h2>
-             <p>F.A.Q</p>
           </div>
           <div class="faq-list">
              <ul>
@@ -436,7 +435,10 @@
       <div class="section-title">
         <h2> خطوات الشحن واضافة رحله في تطبيق اسكاي كرو        </h2>
       </div>
-      <div class="row d-flex align-items-center">
+      <div class="row steps-content d-flex align-items-center">
+        <img class="steps-img" src="./assets/img/steps-img.png" alt="" srcset="">
+      </div>
+      <div id="videos" class="row  d-flex align-items-center">
         <div class="col-lg-6 order-1 order-lg-2">
           <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster.jpg" controls>
             <source src="assets/03.mp4" type="video/mp4">
