--- a/en.html
+++ b/en.html
@@ -50,7 +50,7 @@
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Features</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
-          <li><a class="nav-link scrollto" href="#steps">Introductory Videos</a></li>
+          <li><a class="nav-link scrollto" href="#videos">Introductory Videos</a></li>
           <li><a class="nav-link scrollto" href="#payment">payment methods</a></li>
 
         </ul>
@@ -315,7 +315,10 @@
         <div class="section-title">
           <h2> Steps for shipping and adding a trip in the Sky Crow app</h2>
         </div>
-        <div class="row d-flex align-items-center">
+        <div class="row steps-content d-flex align-items-center">
+          <img class="steps-img" src="./assets/img/steps-img.png" alt="" srcset="">
+        </div>
+        <div id="videos" class="row d-flex align-items-center">
           <div class="col-lg-6 order-1 order-lg-2">
             <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster.jpg" controls>
               <source src="assets/03.mp4" type="video/mp4">
