--- a/en.html
+++ b/en.html
@@ -321,13 +321,13 @@
         </div>
         <div id="videos" class="row d-flex align-items-center">
           <div class="col-lg-6 order-1 order-lg-2">
-            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster.jpg" controls>
+            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster2.jpg" controls>
               <source src="assets/03.mp4" type="video/mp4">
             </video>
           
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/_v2.jpg" controls>
+            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster3.jpg" controls>
               <source src="assets/steps.mp4" type="video/mp4">
             </video>
           </div>
@@ -341,13 +341,13 @@
         </div>
         <div class="row d-flex align-items-center">
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/_v3.jpg" controls>
+            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster4.jpg" controls>
               <source src="assets/04.mp4" type="video/mp4">
               <p>Your browser does not support the video tag.</p>
             </video>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
-            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/_v4.jpg" controls>
+            <video class="animate__animated promo_video" style="width: 100%;" poster="assets/img/video_poster5.jpg" controls>
               <source src="assets/02.mp4" type="video/mp4">
               <p>Your browser does not support the video tag.</p>
             </video>
